RESOLVED FIXED118111
[EFL][REGRESSION] Crash after r151540 with debug build
https://bugs.webkit.org/show_bug.cgi?id=118111
Summary [EFL][REGRESSION] Crash after r151540 with debug build
Ryuan Choi
Reported 2013-06-26 18:57:26 PDT
As my mistake, ASSERT condition was wrong refactored. Patch will be added. Sorry about it.
Attachments
Patch (1.46 KB, patch)
2013-06-26 19:07 PDT, Ryuan Choi
no flags
Ryuan Choi
Comment 1 2013-06-26 19:07:43 PDT
Gyuyoung Kim
Comment 2 2013-06-26 19:08:36 PDT
Comment on attachment 205555 [details] Patch r=me
Ryuan Choi
Comment 3 2013-06-26 19:12:06 PDT
Note You need to log in before you can comment on or make changes to this bug.