[EFL][REGRESSION] Crash after r151540 with debug build https://bugs.webkit.org/show_bug.cgi?id=118111

Reviewed by Gyuyoung Kim.

* ewk/ewk_view.cpp:
(ewk_view_scroll): Fixed ASSERT conditions wrongly refactored.

Canonical link: https://commits.webkit.org/136151@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152071 268f45cc-cd09-0410-ab3c-d52691b4dbfc